<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/eyecare"
        android:backgroundTint="@color/blackTint"
        android:backgroundTintMode="multiply">

        <androidx.cardview.widget.CardView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            app:cardCornerRadius="1000dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/welcome_eyecaria"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_welcome"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/save_life"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_skip"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_above="@id/btn_next"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorAccentDark"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/skip"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_next"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorAccentDark"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/next"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>



